# WorkMatchAPI

./: .dockerignore  .env.example  .flake8  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  wlcopy
docker/: app.yaml  broker.yaml  storage.yaml
migrations/: env.py
migrations/versions/: 0fc5c5aadbdc_employmenttype.py  1159d47e376d_specialist_skill_refactor.py  12675a4e54f2_added_all_tables.py  137b8a56819f_.py  1ba5316e425d_.py  202655005c5c_acl.py  21d53abc8ca3_.py  2623d9f96d40_employmenttype.py  3d5dfbed1a9a_.py  49b647b6ff17_add_initial_roles_and_employment_types.py  4f0bfa824380_.py  51980cc3dfbe_.py  5da9f21fca9e_first_migration.py  61b452f559cf_fixed_vacancy_remove.py  81c1e3cf0013_fixed_roles.py  823a9133d42a_.py  9373a4191fa6_.py  97f972ab2bd8_salary_check.py  98b82f490681_.py  a4a8e1adf830_initial.py  b4454969cd5a_employmenttype.py  be4da80c93f1_uuid_s_and_salary_for_vacancy.py  c7e8d52dc02f_created_by.py  cd712f2671c7_add_initial_roles_and_employment_types.py  cef1aaf10ce3_.py  d4d320866890_employmenttype.py  dbecb1f3f281_improve_useractions_table.py
src/: generate_fake_data.py  main.py
src/api/v1/: __init__.py
src/api/v1/analysis/: __init__.py  analysis.py
src/api/v1/applications/: __init__.py  applications.py
src/api/v1/monitoring/: __init__.py  health.py
src/api/v1/specialists/: __init__.py  specialists.py
src/api/v1/users/: __init__.py  users.py
src/api/v1/vacancy/: __init__.py  vacancy.py
src/app/admin/: __init__.py  analysis.py  applications.py  experience.py  role.py  skill.py  specialist.py  user.py  user_action.py  vacancy.py
src/app/controllers/: __init__.py  analysis.py  application.py  auth.py  specialist.py  user.py  vacancy.py
src/app/models/: __init__.py  analysis_result.py  application.py  employment_type.py  role.py  skill.py  specialist.py  specialist_experience.py  specialist_skill.py  user.py  user_action.py  vacancy.py
src/app/repositories/: __init__.py  analysis.py  application.py  specialist.py  user.py  vacancy.py
src/app/schemas/extras/: current_user.py  health.py
src/app/schemas/requests/: specialist.py  users.py  vacancy.py
src/app/schemas/responses/: analysis.py  application.py  specialist.py  users.py  vacancy.py
src/core/: config.py  elasticsearch.py  server.py
src/core/cache/: __init__.py  cache_manager.py  cache_tag.py  redis_backend.py
src/core/cache/base/: __init__.py  backend.py  key_maker.py
src/core/controller/: __init__.py  base.py
src/core/database/: __init__.py  session.py  standalone_session.py
src/core/database/mixins/: __init__.py  timestamp.py
src/core/exceptions/: __init__.py
src/core/factory/: __init__.py  factory.py
src/core/fastapi/dependencies/: authentication.py  current_user.py  permissions.py  role_required.py
src/core/fastapi/middlewares/: __init__.py  admin_auth.py  authentication.py  sqlalchemy.py  user_action_logger.py
src/core/repository/: base.py
src/core/security/: __init__.py  access_control.py  jwt.py  password.py
src/core/utils/: __init__.py  datetime_util.py
src/tests/: conftest.py
src/tests/api/: conftest.py  overrides.py
src/tests/api/v1/applications/: test_applications.py
src/tests/api/v1/specialists/: test_specialists.py
src/tests/api/v1/users/: test_users.py
src/tests/api/v1/vacancy/: test_vacancy.py
src/tests/core/repository/: test_base.py
src/tests/core/security/: test_jwt_handler.py  test_password.py
src/tests/factory/: users.py
src/tests/utils/: login.py
src/worker/: __init__.py  worker.py
src/worker/tasks/: __init__.py  neural_network.py
