[tool.poetry]
name = "workmatchapi"
version = "0.1.0"
description = ""
authors = ["actusnileh <actusnileh@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
pydantic-settings = "^2.8.0"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.38"
pyjwt = "^2.10.1"
python-jose = "^3.4.0"
passlib = "^1.7.4"
bcrypt = "^4.3.0"
cryptography = "^44.0.1"
asyncpg = "^0.30.0"
pydantic = {extras = ["email"], version = "^2.10.6"}
alembic = "^1.14.1"
debugpy = "^1.8.12"
sqladmin = "^0.20.1"
itsdangerous = "^2.2.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
isort = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output=3
include_trailing_comma=true
line_length=120
lines_after_imports=2
lines_between_sections=1
lines_between_types=0
force_alphabetical_sort_within_sections=true
ensure_newline_before_comments=true
combine_as_imports=true
combine_star=true
skip_gitignore=true
balanced_wrapping=true
force_grid_wrap=2
src_paths=["src", "tests"]
skip_glob=[
    ".git",
    ".idea",
    ".vscode",
    "venv",
    ".venv",
]
known_fastapi=["fastapi"]
known_first_party=["src"]
sections=[
    "FUTURE",
    "STDLIB",
    "FASTAPI",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]