[project]
name = "workmatchapi"
version = "0.1.0"
description = ""
authors = [{ name = "actusnileh", email = "actusnileh@gmail.com" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "fastapi>=0.115.8,<0.116",
    "pydantic-settings>=2.8.0,<3",
    "uvicorn>=0.34.0,<0.35",
    "sqlalchemy>=2.0.38,<3",
    "pyjwt>=2.10.1,<3",
    "python-jose>=3.4.0,<4",
    "passlib>=1.7.4,<2",
    "bcrypt>=4.3.0,<5",
    "cryptography>=44.0.1,<45",
    "asyncpg>=0.30.0,<0.31",
    "pydantic[email]>=2.10.6,<3",
    "alembic>=1.14.1,<2",
    "debugpy>=1.8.12,<2",
    "sqladmin>=0.20.1,<0.21",
    "itsdangerous>=2.2.0,<3",
    "pytest>=8.3.5,<9",
    "pytest-asyncio>=0.25.3,<0.26",
    "httpx<0.28",
    "faker>=37.0.0,<38",
    "redis>=5.2.1,<6",
    "ujson>=5.10.0,<6",
    "elasticsearch>=8.17.2,<9",
    "aiohttp>=3.11.14,<4",
    "celery>=5.4.0,<6",
    "asgiref=^3.8.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0,<5",
    "isort>=6.0.0,<7",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
multi_line_output=3
include_trailing_comma=true
line_length=120
lines_after_imports=2
lines_between_sections=1
lines_between_types=0
force_alphabetical_sort_within_sections=true
ensure_newline_before_comments=true
combine_as_imports=true
combine_star=true
skip_gitignore=true
balanced_wrapping=true
force_grid_wrap=2
src_paths=["src", "tests"]
skip_glob=[
    ".git",
    ".idea",
    ".vscode",
    "venv",
    ".venv",
]
known_fastapi=["fastapi"]
known_first_party=["src"]
sections=[
    "FUTURE",
    "STDLIB",
    "FASTAPI",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]

[tool.black]
line-length = 120
